# aidd-codebase

./: .gitignore  .gitmodules  LICENSE  README.md  authors.py  pyproject.toml  registries.py  requirements.txt  start_project.py
aidd_codebase/: registries.py  start_project.py
aidd_codebase/data_tools/: collate.py  dataprocessors.py  datasets.py
aidd_codebase/data_utils/: augmentation.py  collate.py  dataprocessors.py  datasets.py  tokenizer.py
aidd_codebase/datamodules/: __init__.py  datachoice.py  smiles.py  tokenizer.py  vocab.py
aidd_codebase/dataprocessor/: processingchoice.py
aidd_codebase/framework/: framework.py  initiator.py  loggers.py  loopchoice.py  loops.py  metricchoice.py  metrics.py  opt_ensembling.py  optimizers.py  scheduling.py  tracking.py
data_utils/: augmentation.py  collate.py  dataprocessors.py  datasets.py  tokenizer.py
datamodules/: __init__.py  smiles.py
development/: augmentation.py  datamodules.py  datasets.py  decorators.py  plotting.py  smiles.py
example_ESR/: example_file.py  main.py  tryout.ipynb
framework/: __init__.py  framework.py  loggers.py  loopchoice.py  loops.py  optimizers.py  tracking.py
math_utils/: cross_product.py
models/: __init__.py  basic_model.py  beamsearch.py  decoder.py  encoder.py  modelchoice.py  net_classifier.py  seq2seq.py
new_project/: __init__.py  main.py
tests/: dependency_versions.py  test_aidd_codebase.py
utils/: callbacks.py  config.py  config_checker.py  directories.py  helper_functions.py  loading_saving.py  metacoding.py  setup.py  tools.py  typescripts.py
(+83 files in other folders)
